# wshawk

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py  wshawk-bridge.spec
.github/workflows/: build.yml
desktop/: LICENSE.txt  index.js  package-lock.json  package.json  preload.js
desktop/scripts/: smoke-check.js
desktop/src/: index.html  renderer.js  style.css
docs/: DEFENSIVE_VALIDATION.md  DESKTOP_V4_GUIDE.md  DOCKER.md  V4_COMPLETE_GUIDE.md  advanced_usage.md  getting_started.md  session_tests.md  validation_checklist.md  vulnerabilities.md
examples/: defensive_check.py
extension/: background.js  manifest.json  popup.html  popup.js
payloads/polyglots/: all.json
scripts/: release_security_checks.py
tests/: test_cvss_calculator.py  test_db_manager_platform.py  test_desktop_hardening.py  test_http_attack_services.py  test_message_intelligence.py  test_offensive_attacks.py  test_payload_mutator.py  test_platform_routes_integration.py  test_platform_runtime.py  test_plugin_isolation.py  test_project_store.py  test_protocol_and_exports.py  test_redteam_lab_benchmarks.py  test_release_security_checks.py  test_secret_store.py  test_server_fingerprint.py  test_session_services.py  test_validation_graphql_subscriptions_lab.py  test_validation_realtime_saas.py  test_validation_runner.py  test_validation_socketio_saas.py  test_vulnerability_verifier.py  test_waf_detector.py  test_web_pentest_platform.py  test_web_platform_runtime.py
validation/: __init__.py  common.py  run_validation.py
validation/artifacts/: README.md
validation/expected/: socketio_saas.json  (+2 more)
wshawk/: __init__.py  __main__.py  advanced_cli.py  bridge_security.py  config.py  db_manager.py  dom_invader.py  enhanced_reporter.py  gui_bridge.py  headless_xss_verifier.py  interactive.py  legacy_advanced_cli.py  legacy_core.py  platform_runtime.py  plugin_runner.py  plugin_system.py  report_exporter.py  scanner_v2.py  secret_store.py  secure_store.py  ws_discovery.py
(+92 files in other folders)
